[tool.poetry]
name = "app"
version = "0.1.0"
description = "Pizzeria Customer Service Chatbot"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
langchain = "^0.3.25"
langchain-openai = "^0.3.23"
supabase = "^2.15.3"
python-dotenv = "^1.1.0"
structlog = "^25.4.0"
langchain-community = "^0.3.25"
langchain-core = "^0.3.65"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
transformers = "^4.53.0"
langchain-google-genai = "^2.1.5"
langgraph = "^0.5.1"
langgraph-checkpoint = "^2.1.0"
langchain-groq = "^0.3.5"
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

